# LightBox

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  io_config.h  key.c  key.h  led_strip_encoder.c  main.c  mpu6050.c  mpu6050.h  my_common.c  quaternion_filter.c  quaternion_filter.h  ws2812.c  ws2812.h  ws2812_encoder.c
main/static/: index.html  static.h
main/wifi/: my_http_file_server.c  my_http_server.c  my_mount.c  my_wifi_ota.c  my_wifi_ota.h  wifi_ap.c
